# objectless_alife

./: .gitignore  AGENTS.md  PRODUCT.md  README.md  STRUCTURE.md  TECH.md  pyproject.toml  spec.md
docs/: stage_b_results.md  stage_c_results.md
paper/: main.tex  peer_review_A_on_2026-02-16.md  peer_review_B_on_2026-02-16.md  references.bib  review_A_on_2026-02-14.md  review_A_on_2026-02-15.md  review_B_on_2026-02-14.md  review_B_on_2026-02-15.md  supplementary.tex
paper/alife_official_docs/ALIFE2026/: The 2026 Artificial Life Conference.txt
paper/alife_official_docs/ALIFE2026/ALIFE2026_template/: example.tex
paper/alife_official_docs/Artificial Life journal/: Artificial Life Submission Guidelines.txt  Artificial Life journal submission template.tex
scripts/: cascaded_filter_analysis.py  metric_comparison.py  multi_seed_p1_control.py  post_hoc_analysis.py
src/: export_web.py  filters.py  metrics.py  rules.py  run_search.py  stats.py  visualize.py  world.py
tests/: test_cascaded_filter.py  test_export_web.py  test_filters.py  test_metric_comparison.py  test_metrics.py  test_multi_seed_p1_control.py  test_rules.py  test_run_search.py  test_stats.py  test_visualize.py  test_world.py
viz/: README.md  index.html  package.json
viz/public/: styles.css
viz/src/: config.js  main.js  palettes.js
viz/src/recording/: GifRecorder.js
viz/src/renderer/: BaseRenderer.js  OrganicRenderer.js  ParticleRenderer.js
viz/src/simulation/: DataLoader.js  Interpolator.js
viz/src/ui/: Controls.js  MetricOverlay.js  SideBySide.js
