[project]
name = "objectless-alife"
version = "0.1.0"
description = "Objective-free ALife PoC"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.10.0",
  "pyarrow>=18.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
